--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+h1{
+	text-align:center;	
+	span{
+		color:blue;
+	}
+}
+input{
+	display:grid;
+	width:100%;
+	margin-bottom:4px;
+}
+button{
+	margin-top:10px;
+	padding:6px 10px;
+	color:white;
+	background:blue;
+	border:1px solid ;
+	border-radius:8px
+}
+hr{
+	border:1px solid;
+}
+table{
+	width:100%;
+	margin-top:10px;
+}
+tbody{
+	    text-align: center;
+}
+tr .hrLine{
+	border:2px solid;
+}
+
