--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,47 @@ button{
 hr{
 	border:1px solid;
 }
+
 table{
 	width:100%;
 	margin-top:10px;
 }
 tbody{
 	    text-align: center;
+}
+tr .hrLine{
+	border:2px solid ;
+}
+.form-group {
+    margin-bottom: 10px;
+}
+
+.form-group label {
+    display: block;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+button {
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #218838;
+}
+
+.delete-btn {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
 }
 
