--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ table{
 tbody{
 	    text-align: center;
 }
-tr .hrLine{
+#book-list tr .hrLine{
 	border:2px solid ;
 }
 .form-group {
@@ -63,8 +63,5 @@ button:hover {
     border: none;
     padding: 5px 10px;
     cursor: pointer;
-}
-..table-striped{
-	border:1px solid;
 }
 
